welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
do {
^Poucet:17: error: 'while' expected but '}' found.
}
^